<resources>
    <string name="app_name">OvertimeMgmtApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="unique_code">Unique Code</string>
    <string name="register">Register</string>
    <string name="shift_manager">Shift Manager</string>
    <string name="what_is_unique_code">What is unique code?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="log_out">Log Out</string>
    <string name="show_all_shifts">Show All Shifts</string>
    <string name="account_settings">Account Settings</string>
    <string name="ucheckbox"> com.example.overtimemgmtapp.ucheckbox</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shift_title">Shift Title</string>
    <string name="description">Description</string>
    <string name="clear">Clear</string>
    <string name="submit">Submit</string>
    <string name="start_time">Start Time</string>
    <string name="select_date">Select Date</string>
    <string name="end_time">End Time</string>
    <string name="hourly_rate_e_g_9_65">Hourly Rate(£) e.g. (9.65)</string>
    <string name="todo">TODO</string>
    <string name="job_description">Job Description</string>
    <string name="book_shift">Book Shift</string>
    <string name="available">Available</string>
    <string name="hourly_rate">Hourly Rate</string>
    <string name="date">Date</string>
    <string name="shift_title1">shift_title1</string>
    <string name="shiftheading">shiftheading</string>
    <string name="delete_shift">Delete Shift</string>
    <string name="tvusername">Username</string>
    <string name="tvfullname">Fullname</string>
    <string name="tvemail">Email</string>
    <string name="tvuniquecode">Uniquecode</string>
    <string name="tvpassword">Password</string>
    <string name="tvshow_password">Show Password</string>
    <string name="accountdetails">Account Details</string>
    <string name="home">Home</string>
    <string name="delete">Delete</string>
    <string name="sign_in">Sign In</string>
    <string name="register_here">Register Here</string>
    <string name="full_name">Full Name</string>


</resources>
