<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserAvailability"
    android:background="?attr/colorPrimary">

    <ImageView
        android:layout_width="232dp"
        android:layout_height="224dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_time_24dp"
        android:contentDescription="@string/description" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="152dp"
        android:layout_marginTop="280dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/a_date_textu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/a_start_timeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/start_time"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/a_end_timeu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/end_time"
            android:textAlignment="center"
            android:textColor="@android:color/background_light"
            android:textSize="22sp"
            android:textStyle="bold" />


    </LinearLayout>


    <Button
        android:id="@+id/btn_deletetime"
        android:layout_width="230dp"
        android:layout_height="62dp"
        android:layout_gravity="bottom"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="45dp"
        android:onClick="DeleteTime"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="22sp"
        android:textStyle="bold" />









</android.support.design.widget.CoordinatorLayout>