<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobsActivity">


    <android.support.design.widget.AppBarLayout
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/appbarlayout"
        >

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/ctoolbar"
            app:layout_scrollFlags="exitUntilCollapsed|scroll"
            app:title="Shift Title"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp"
            >


            <android.support.v7.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                android:theme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingLeft="2dp"

                >

                <ImageView
                    android:layout_width="120dp"
                    android:layout_height="129dp"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/ic_event_24dp"
                    android:contentDescription="@string/description" />

                <LinearLayout
                    android:layout_width="272dp"
                    android:layout_height="180dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/a_shift_heading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/shiftheading"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/a_date_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="7dp"
                        android:text="@string/date"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/a_start_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/start_time"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/a_end_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/end_time"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAlignment="center"/>

                    <TextView
                        android:id="@+id/a_rate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/hourly_rate"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />

                    <TextView
                        android:id="@+id/a_employee"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:text="@string/available"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        />


                </LinearLayout>





            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>



    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/a_description"
            android:text="@string/job_description"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            />




    </android.support.v4.widget.NestedScrollView>

    <Button
        android:id="@+id/btn_bookshift"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="25dp"
        android:onClick="BookShift"
        android:text="@string/book_shift"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_deleteshift"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="70dp"
        android:onClick="DeleteShift"
        android:text="@string/delete_shift"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />




</android.support.design.widget.CoordinatorLayout>