<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMainActivity">


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:background="?android:attr/windowBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />

    <EditText
        android:id="@+id/et_shifttitle"
        android:layout_width="351dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/shift_title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="351dp"
        android:layout_height="179dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_shifttitle"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/et_hourlyrate"
        android:layout_width="351dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/hourly_rate_e_g_9_65"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        tools:targetApi="o" />

    <ImageButton
        android:id="@+id/ib_date"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/btn_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_date_range_blue_24dp"
        />

    <ImageButton
        android:id="@+id/ib_stime"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toStartOf="@+id/ib_etime"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/ib_date"
        app:srcCompat="@drawable/ic_access_time_black_24dp" />

    <ImageButton
        android:id="@+id/ib_etime"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="32dp"
        android:background="?android:attr/panelBackground"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_access_time_black_24dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="24dp"
        android:text="@string/submit"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="OnAddShift"/>

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="100dp"
        android:layout_height="51dp"
        android:layout_marginStart="92dp"
        android:layout_marginBottom="24dp"
        android:text="@string/clear"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/navigation"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="clear"/>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="8dp"
        android:text="@string/select_date"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/ib_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hourlyrate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_stime"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/start_time"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/ib_stime"
        app:layout_constraintEnd_toStartOf="@+id/tv_etime"
        app:layout_constraintStart_toEndOf="@+id/tv_date"
        app:layout_constraintTop_toBottomOf="@+id/et_hourlyrate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_etime"
        android:layout_width="99dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="8dp"
        android:text="@string/end_time"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/ib_etime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_hourlyrate"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>